--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ESCPOS Thermal Printer</string>
+    <string name="hint_type_text">Type text to print</string>
+    <string name="print">Print</string>
+    <string name="type_text_to_print">What do you want to print?</string>
 </resources>
